--- a/notebooks/01_collection.ipynb
+++ b/notebooks/01_collection.ipynb
@@ -20,7 +20,7 @@
     "1. [Retreiving RIAA Data](#1)\n",
     "2. [Extracting Artists from Spotify API](#2)\n",
     "3. [Retrieving Top-10 Songs per Artist from Spotify API](#3)\n",
-    "4. [Retrieving Audio Features from Spotify API](#4)"
+    "4. [Moving Genres into Separate Lookup Table](#4)"
    ]
   },
   {
