adding ascap comp data

--- a/notebooks/05_cosine.ipynb
+++ b/notebooks/05_cosine.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +165,36 @@
    "source": [
     "with open('../pickle/cos_sim_mat_g.npy', 'wb') as f:\n",
     "    np.save(f, cos_sim_mat_g)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../pickle/cos_sim_mat_g.npy', 'rb') as f:\n",
+    "    cos_sim_mat_g = np.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22891"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cos_sim_mat_g)"
    ]
   },
   {
