--- a/notebooks/genius_credits.ipynb
+++ b/notebooks/genius_credits.ipynb
@@ -750,7 +750,11 @@
     "for artist in genius_artist_ids_single:\n",
     "    page_no = 1\n",
     "    try:\n",
-    "        url = 'https://api.genius.com/artists/' + str(list(list(artist.values())[0].values())[0]) + '/songs/?per_page=50&page=' + str(page_no) + access_token\n",
+    "        url = 'https://api.genius.com/artists/' \n",
+    "        + str(list(list(artist.values())[0].values())[0]) \n",
+    "        + '/songs/?per_page=50&page=' \n",
+    "        + str(page_no) \n",
+    "        + access_token\n",
     "    except:\n",
     "        continue\n",
     "    try:\n",
