--- a/notebooks/ascap_scrape.ipynb
+++ b/notebooks/ascap_scrape.ipynb
@@ -187,7 +187,7 @@
     "            \n",
     "def result_scraper(artist):\n",
     "    '''\n",
-    "    Searches ASCAP's ACE database for artist, retreives the \n",
+    "    Searches ASCAP's ACE database for artist, retrieves the \n",
     "    subsequent results and stores them as an html file.\n",
     "    '''\n",
     "    d = 2\n",
